traumatic brain injury additions

--- a/health_app.kv
+++ b/health_app.kv
@@ -121,12 +121,16 @@ WindowManager:
 	HyperTensionPage:
 		id:HyperTensionPage
 		name:'HyperTensionPage'
-		
+
 	HyperTensionScorePage:
 		id:HyperTensionScorePage
 		name:'HyperTensionScorePage'
 
 	# ------------------------------------- #
+	TraumaticBrainInjuryLandingPage:
+		id:TraumaticBrainInjuryLandingPage
+		name:'TraumaticBrainInjuryLandingPage'
+
 	TraumaticBrainInjuryPage:
 		id:TraumaticBrainInjuryPage
 		name:'TraumaticBrainInjuryPage'
@@ -305,7 +309,7 @@ WindowManager:
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
 					on_release:
-						root.manager.current="TraumaticBrainInjuryPage"
+						root.manager.current="TraumaticBrainInjuryLandingPage"
 						root.manager.transition.direction="left"
 					IconLeftWidget:
 						icon:'brain'
