--- a/health_app.kv
+++ b/health_app.kv
@@ -135,6 +135,10 @@ WindowManager:
 		id:TraumaticBrainInjuryPage
 		name:'TraumaticBrainInjuryPage'
 
+	TraumaticBrainInjuryScorePage:
+		id:TraumaticBrainInjuryScorePage
+		name:'TraumaticBrainInjuryScorePage'
+
 	# ------------------------------------- #
 	CognitiveDeclinePage:
 		id:CognitiveDeclinePage
