--- a/layout_files/PhysicalActivity.kv
+++ b/layout_files/PhysicalActivity.kv
@@ -1,8 +1,75 @@
+#:set physical_landing_blurb    'Research shows that >150 minutes of moderate physical activity (PA) or > 75 minutes of vigorous PA per week may decrease the risk for Alzheimer’s disease.'
+#:set physical_landing_subtitle 'Answer the following questions about your physical activity'
+#:set physical_toolbar_title    'Physical Activity'
+
+<PhysicalActivityLandingPage>:
+
+    BoxLayout:
+        orientation: 'vertical'
+
+        MDToolbar:
+            title: physical_toolbar_title
+            halign: 'left'
+            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
+            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
+            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
+            elevation:8
+
+        MDLabel:
+            text:''
+            size_hint_y:0.3
+        MDLabel:
+            text: physical_landing_blurb
+            font_size:'14sp'
+            halign: 'left'
+            size_hint_x:0.8
+            pos_hint:{'center_x':0.5}
+
+        MDLabel:
+            # font_size:'2xw0sp'
+            text: physical_landing_subtitle
+            # text_color:DARK_BLUE
+            theme_text_color:"Hint"
+            halign: 'left'
+            size_hint_x:0.8
+            # size_hint_x:0.5
+            pos_hint:{'center_x':0.5}
+
+        MDRaisedButton:
+            text:"Begin"
+            font_style:'Button'
+            # size_hint_x:0.7
+            pos_hint:{'center_x':0.5}
+            on_release:
+
+                root.manager.current='PhysicalActivityPage'
+                root.manager.transition.direction="left"
+                # root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
+
+
+        BoxLayout:
+            orientation: 'horizontal'
+            size_hint_y:0.3
+            MDRaisedButton:
+                size_hint_x:1
+                text:'                     <                       '
+                on_release:
+                    root.manager.current='DietScorePage'
+                    root.manager.transition.direction="right"
+            MDRaisedButton:
+                size_hint_x:1
+                text:'                     >                       '
+                on_release:
+                    root.manager.current='PhysicalActivityPage'
+                    root.manager.transition.direction="left"
+                    root.parent.ids['PhysicalActivityPage'].ids['android_tabs'].switch_tab('1')
+
+
 <PhysicalActivityPage>:
     BoxLayout:
         orientation: 'vertical'
         MDToolbar:
-            title: 'Physical Activity'
+            title: physical_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
             elevation:8
@@ -135,3 +202,65 @@
     #         size_hint_x:0.9
     #         text_color:1,1,1,1
 
+<PhysicalActivityScorePage>:
+    score_label:score_label
+    BoxLayout:
+        orientation: 'vertical'
+        MDToolbar:
+
+            title: physical_toolbar_title
+            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
+            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
+            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
+            elevation:8
+
+        MDLabel:
+            text: 'Your score is:'
+            halign: 'center'
+
+        MDLabel:
+            id:score_label
+            text: ''
+            halign: 'center'
+
+        MDRaisedButton:
+            id:restart_button
+            text:'Try Again'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.reset_quiz()
+        Widget:
+            size_hint_y:0.05
+        MDRaisedButton:
+            id:next_section
+            text:'Back'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.chevron_left()
+        Widget:
+            size_hint_y:0.05
+        MDRaisedButton:
+            id:next_section
+            text:'Next'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.arrow_right()
+
+
+        MDLabel:
+            size_hint_y:0.7
+
+
+        BoxLayout:
+            orientation: 'horizontal'
+            MDRaisedButton:
+                text:'                     <                       '
+                size_hint_x:1
+                on_release:root.arrow_left()
+            MDRaisedButton:
+                text:'                     >                       '
+                size_hint_x:1
+                on_release:root.arrow_right()
