--- a/layout_files/Alcohol.kv
+++ b/layout_files/Alcohol.kv
@@ -45,29 +45,23 @@
 			# size_hint_x:0.7
 			pos_hint:{'center_x':0.5}
 			on_release:
-
-				root.manager.current='AlcoholUsagePage'
-				root.manager.transition.direction="left"
-				# root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
+				root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
+				root.arrow_right()
 
 
 		BoxLayout:
 			orientation: 'horizontal'
 			size_hint_y:0.3
 			MDRaisedButton:
-				size_hint_x:1
+				# size_hint_x:1
 				text:'                     <                       '
-				on_release:
-					root.manager.current='PhysicalActivityPage'
-					root.manager.transition.direction="right"
+				on_release:root.arrow_left()
 			MDRaisedButton:
 				size_hint_x:1
 				text:'                     >                       '
 				on_release:
-					root.manager.current='AlcoholUsagePage'
-					root.manager.transition.direction="left"
 					root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
-
+					root.arrow_right()
 
 <AlcoholUsagePage>:
 	BoxLayout:
