--- a/layout_files/HyperTension.kv
+++ b/layout_files/HyperTension.kv
@@ -37,29 +37,20 @@
             font_style:'Button'
             # size_hint_x:0.7
             pos_hint:{'center_x':0.5}
-            on_release:
-
-                root.manager.current='HyperTensionPage'
-                root.manager.transition.direction="left"
-                # root.parent.ids['HyperTensionPage'].ids['android_tabs'].switch_tab('1')
+            on_release: root.arrow_right()
 
 
         BoxLayout:
             orientation: 'horizontal'
             size_hint_y:0.3
             MDRaisedButton:
-                size_hint_x:1
+                # size_hint_x:1
                 text:'                     <                       '
-                on_release:
-                    root.manager.current='DepressionScorePage'
-                    root.manager.transition.direction="right"
+                on_release:root.arrow_left()
             MDRaisedButton:
                 size_hint_x:1
                 text:'                     >                       '
-                on_release:
-                    root.manager.current='HyperTensionPage'
-                    root.manager.transition.direction="left"
-                    # root.parent.ids['HyperTensionPage'].ids['android_tabs'].switch_tab('1')
+                on_release: root.arrow_right()
 
 <HyperTensionPage>:
     MDBoxLayout:
