added cognitive decline score page

--- a/health_app.kv
+++ b/health_app.kv
@@ -159,6 +159,10 @@ WindowManager:
 		id:CognitiveDeclinePage
 		name:'CognitiveDeclinePage'
 
+	CognitiveDeclineScorePage:
+		id:CognitiveDeclineScorePage
+		name:'CognitiveDeclineScorePage'
+
 # =======================================
 
 
