--- a/layout_files/CognitiveDecline.kv
+++ b/layout_files/CognitiveDecline.kv
@@ -81,3 +81,66 @@
 				on_release:
 					root.manager.current='RiskAssesmentPage'
 					root.manager.transition.direction="right"
+
+<CognitiveDeclineScorePage>:
+    score_label:score_label
+    BoxLayout:
+        orientation: 'vertical'
+        MDToolbar:
+
+            title: cognitive_toolbar_title
+            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
+            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
+            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
+            elevation:8
+
+        MDLabel:
+            text: 'Your score is:'
+            halign: 'center'
+
+        MDLabel:
+            id:score_label
+            text: ''
+            halign: 'center'
+
+        MDRaisedButton:
+            id:restart_button
+            text:'Try Again'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.reset_quiz()
+        Widget:
+            size_hint_y:0.05
+        MDRaisedButton:
+            id:next_section
+            text:'Back'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.chevron_left()
+        Widget:
+            size_hint_y:0.05
+        MDRaisedButton:
+            id:next_section
+            text:'Next'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.arrow_right()
+
+
+        MDLabel:
+            size_hint_y:0.7
+
+
+        BoxLayout:
+            orientation: 'horizontal'
+            MDRaisedButton:
+                text:'                     <                       '
+                size_hint_x:1
+                on_release:root.arrow_left()
+            MDRaisedButton:
+                text:'                     >                       '
+                size_hint_x:1
+                on_release:root.arrow_right()
