fixed cog decline

--- a/layout_files/CognitiveDecline.kv
+++ b/layout_files/CognitiveDecline.kv
@@ -79,8 +79,8 @@
 				text:'                     >                       '
 				size_hint_x:1
 				on_release:
-					root.manager.current='RiskAssesmentPage'
-					root.manager.transition.direction="right"
+					root.manager.current='CognitiveDeclineScorePage'
+					root.manager.transition.direction="left"
 
 <CognitiveDeclineScorePage>:
     score_label:score_label
