--- a/layout_files/CognitiveDecline.kv
+++ b/layout_files/CognitiveDecline.kv
@@ -2,6 +2,10 @@
 #:set cognitive_landing_subtitle 'Answer the following questions about your cognitive abilities'
 #:set cognitive_toolbar_title    'Cognitive Decline'
 
+#:set apple_image 'pics/apple.png'
+#:set table_image 'pics/table.png'
+#:set penny_image 'pics/penny.png'
+
 <CognitiveDeclineLandingPage>:
 
 	BoxLayout:
@@ -64,24 +68,60 @@
 			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
 			right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
 			elevation:8
-		MDLabel:
-			text:''
+		# MDLabel:
+		# 	text:''
+
+		MDBoxLayout:
+			size_hint_y:0.7
+
+			MDTabs:
+				id: android_tabs
+				tab_pos:'left_top'
+				on_tab_switch: root.on_tab_switch(*args)
+
+				Tab:
+					text:'1'
+
+
+				Tab:
+					text:'2'
+					MDBoxLayout:
+					    orientation: 'vertical'
+					    md_bg_color:0,0,1,0.05
+
+						Image:
+							source: apple_image
+							pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+						Image:
+							source: table_image
+							pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+						Image:
+							source: penny_image
+							pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+				Tab:
+					text:'3'
+					MDBoxLayout:
+						orientation:'vertical'
+						MDLabel:
+							text: "What were the three objects I asked you to remember?"
+							halign: 'center'
+							size_hint_x:0.9
+
+
+
 
 		BoxLayout:
+			size_hint_y:0.3
 			orientation: 'horizontal'
 			MDRaisedButton:
 				text:'                     <                       '
 				size_hint_x:1
-				on_release:
-					root.manager.current='CognitiveDeclineLandingPage'
-					root.manager.transition.direction="right"
+				on_release:root.arrow_left()
 			MDRaisedButton:
 				text:'                     >                       '
 				size_hint_x:1
-				on_release:
-					root.manager.current='CognitiveDeclineScorePage'
-					root.manager.transition.direction="left"
-
+				on_release:root.arrow_right()
+				
 <CognitiveDeclineScorePage>:
     score_label:score_label
     BoxLayout:
